add export product
